# data-safe-haven

./: .PSScriptAnalyzerSettings.psd1  .PSScriptFormatterSettings.psd1  .all-contributorsrc  .flake8  .gitattributes  .gitignore  .lychee.toml  .markdownlinkcheck.json  .mdlstyle.rb  .readthedocs.yaml  .travis.yaml  .travis.yml  .yamllint.yaml  ADConfiguration-Create_GitLab_User.ps1  ADConfiguration-Install_Server_Features.ps1  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CreateVM_DC.ps1  CreateVM_Linux_VMs.ps1  CreateVM_NPS.ps1  DISCLAIMER.md  DSPT.md  INSTALL.md  LICENSE  NSG-Key_Vault_Rules_Linux.ps1  NSG-Key_Vault_Rules_WIndows.ps1  README.md  ROADMAP.md  SECURITY.md  VERSIONING.md  VMExtensions-IaaSAntimalware-Config.json  VMExtensions-Install_IaaS_AntiMalware_on_Windows_VMs.ps1  VMExtensions-Windows_OMS_Agent.ps1  add_all.sh  configure_graylog.py  data.json  pyproject.toml  requirements-constraints.txt  (+1 more)
.devcontainer/: Dockerfile  devcontainer.json  install_pwsh_modules.ps1  requirements.txt
.github/: dependabot.yml  issue_template.md  pull_request_template.md  release_drafter.yaml  security_checklist_template.md
.hatch/: requirements-docs.txt  requirements-lint.txt  requirements-test.txt  requirements.txt
activedirectory/: CreateADTrust-Manual-Steps  Create_NSG_Subnet_Identity.ps1
azure/: README.md  build_azure_vm_image.sh  build_vm.sh  cloud-init-buildimage-datascience.yaml  cloud-init-buildimage-ubuntu.yaml  cloud-init-compute-vm.yaml  cloud-init-cran.yaml  cloud-init-datascience.yaml  cloud-init-mirror-external-cran.yaml  cloud-init-mirror-external-pypi.yaml  cloud-init-mirror-internal-cran.yaml  cloud-init-mirror-internal-pypi.yaml  cloud-init-pypi.yaml  cloud-init-ubuntu.yaml  cloud-init.yaml  copy_azure_vm_image.sh  deploy_azure_dsg_vm.sh  deploy_azure_mirror_servers.sh  register_images_in_gallery.sh
common_powershell/: Configuration.psm1  Deployments.psm1  GenerateSasToken.psm1  Logging.psm1  Mirrors.psm1  Security.psm1
data_safe_haven/: README.md  __about__.py  __init__.py  cli.py  directories.py  singleton.py  version.py
decmatt/: .dshconfig  newuser.csv  testuser.csv  wot.csv
deployment/: CheckRequirements.ps1  InstallRequirements.ps1  ShowConfigFile.ps1
design/: bioconductor.md
docs/: CODEOWNERS  CONTRIBUTING.md  DSG-user-documentation.md  Gemfile  Makefile  README.md  VERSIONING.md  _config.yml  build_config_backup.sh  build_docs_instance.sh  build_dsvm_image_instructions.md  code-ingress.md  conf.py  config_backup.sh  deploy_shm_instructions.md  deploy_sre_instructions.md  deploy_sre_tier1_instructions.md  emojify.py  index.md  letter.md  markdown2pdf.json  markdown2pdf.sh  provider-azure-implementation-details.md  provider-data-ingress.md  provider-overview.md  requirements.in  requirements.txt  safe-haven-user-cheat-sheet.md  safe_haven_administrator_guide.md  safe_haven_data_classification_guide.md  safe_haven_investigator_guide.md  safe_haven_user_guide.md  safe_haven_user_guide_tier1.md  safe_haven_webapp_user_guide.md  software-package-request-form.md  software-package-whitelist-policy.md  tier1_user_docs.md  troubleshooting_user_issues.md
docs_old/: README.md
environment_configs/: shm_blue_core_config.json  shm_decovid_core_config.json  shm_green_core_config.json  shm_mortest_core_config.json  shm_testa_core_config.json  shm_testb2_core_config.json  shm_testb_core_config.json  shm_testc_core_config.json  shm_testtl_core_config.json  shm_turing1_core_config.json  sre_bluet1guac_core_config.json  sre_bluet2guac_core_config.json  sre_bluet2msrds_core_config.json  sre_bluet3guac_core_config.json  sre_bluet3msrds_core_config.json  sre_decovidsre1_core_config.json  sre_decovidsre2_core_config.json  sre_greent1guac_core_config.json  sre_greent2guac_core_config.json  sre_greent2msrds_core_config.json  sre_greent3guac_core_config.json  sre_greent3msrds_core_config.json  sre_mortestsre1_core_config.json  sre_mortestsre2_core_config.json  sre_testasandbox_core_config.json  sre_testat1cocal_core_config.json  sre_testat1guac_core_config.json  sre_testat2guac_core_config.json  sre_testat2msrds_core_config.json  sre_testat3guac_core_config.json  sre_testat3msrds_core_config.json  sre_testat3test_core_config.json  sre_testbsandbox_core_config.json  sre_testbt1cocal_core_config.json  sre_testbt1guac_core_config.json  sre_testbt2guac_core_config.json  sre_testbt2msrds_core_config.json  sre_testbt3guac_core_config.json  sre_testbt3msrds_core_config.json  sre_testcsandbox_core_config.json  (+9 more)
existing_dsg_environment/: ADConfiguration-Configure_ADDS.ps1  ADConfiguration-Create_AD_Sync_Account.ps1  ADConfiguration-Create_OU_Structure.ps1  ADConfiguration-Create_SQL_User.ps1  ADConfiguration-Create_Security_Groups.ps1  Azure_Disk_Encryption-Enable_Linux_Disk_Encryption.ps1  Azure_Disk_Encryption-Enable_Windows_Disk_Encryption.ps1  Azure_Disk_Encryption-Setup_Service_Principal_in_AAD.ps1  CreateVM_Data_Server.ps1  CreateVM_Recovery_Services.ps1  Create_VNet.ps1  NSG-Prevent_Internet_Access_For_Linux_Servers.ps1  NSG-Prevent_Internet_Access_For_RDS_Session_Hosts.ps1
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_00ade1cd398c6195___init___py.html  z_00ade1cd398c6195_entra_users_py.html  z_00ade1cd398c6195_guacamole_users_py.html  z_00ade1cd398c6195_research_user_py.html  z_00ade1cd398c6195_user_handler_py.html  z_0d2ec68fe3c24586___init___py.html  z_1bbe31b7043b02e5_test_config_py.html  z_1bbe31b7043b02e5_test_pulumi_py.html  z_2d41dd0ff36d50fb_azure_authenticator_py.html  z_2d41dd0ff36d50fb_azure_container_instance_py.html  z_2d41dd0ff36d50fb_azure_fileshare_py.html  z_2d41dd0ff36d50fb_azure_ipv4_range_py.html  z_2d41dd0ff36d50fb_azure_postgresql_database_py.html  z_2d41dd0ff36d50fb_pulumi_account_py.html  z_30f0145423cfc176___init___py.html  z_30f0145423cfc176_sre_provisioning_manager_py.html  z_3785472c4a5f7cae___init___py.html  z_3785472c4a5f7cae_dockerhub_credentials_py.html  z_3785472c4a5f7cae_enums_py.html  z_3785472c4a5f7cae_ip_ranges_py.html  z_3785472c4a5f7cae_transformations_py.html  (+139 more)
run/: example.yaml
(+2796 files in other folders)
